2012-07-06  Joseph Myers  <joseph@codesourcery.com>

	[BZ #14154]
	* sysdeps/ieee754/flt-32/k_tanf.c (__kernel_tanf): Use linear
	approximation for values within 0x1p-13f of an odd multiple of
	pi/4.
	* math/libm-test.inc (tan_test): Do not allow spurious underflow
	exception.  Add more tests.
	* sysdeps/i386/fpu/libm-test-ulps: Update.

	[BZ #6778]
	* sysdeps/i386/fpu/s_expm1.S (__expm1): Check for large negative
	inputs and return -1 for them.  Do not check for +Inf in case not
	reachable for +Inf.
	* sysdeps/i386/fpu/s_expm1f.S (__expm1f): Likewise.
	* sysdeps/i386/fpu/e_expl.S [USE_AS_EXPM1L] (csat): Do not define.
	(IEEE754_EXPL) [USE_AS_EXPM1L]: Check for large negative inputs
	and return -1 for them.  Do not check for +Inf in case not
	reachable for +Inf.
	* sysdeps/x86_64/fpu/e_expl.S [USE_AS_EXPM1L] (csat): Do not
	define.
	(IEEE754_EXPL) [USE_AS_EXPM1L]: Check for large negative inputs
	and return -1 for them.  Do not check for +Inf in case not
	reachable for +Inf.
	* math/libm-test.inc (expm1_test): Add more tests.  Do not allow
	spurious underflow.
	* sysdeps/i386/fpu/libm-test-ulps: Update.
	* sysdeps/x86_64/fpu/libm-test-ulps: Likewise.

2012-07-06  Mike Frysinger  <vapier@gentoo.org>

	* sunrpc/rpc_clntout.c: Change <rpc/types.h> to "rpc/types.h".

2012-07-05  Joseph Myers  <joseph@codesourcery.com>

	[BZ #14157]
	[BZ #14331]
	* math/s_csqrt.c (__csqrt): Avoid multiplying by 0.5 where this
	could result in spurious underflow.  Scale down values above
	DBL_MAX / 4.0 instead of DBL_MAX / 2.0.
	* math/s_csqrtf.c (__csqrtf): Likewise.
	* math/s_csqrtl.c (__csqrtl): Likewise.
	* math/libm-test.inc (csqrt_test): Add more tests.  Do not allow
	spurious underflow.
	* sysdeps/i386/fpu/libm-test-ulps: Update.
	* sysdeps/x86_64/fpu/libm-test-ulps: Likewise.

2012-07-04  Andreas Schwab  <schwab@linux-m68k.org>

	* catgets/Makefile ($(objpfx)de.msg): Use xopen-msg.awk instead of
	xopen-msg.sed.
	* catgets/xopen-msg.awk: New file.